	  to differentiate case of clone_and_clean vs clean_in_place. In the
	  case of clone_and_clean() we also need to make sure we don't use
	  Acme::Damn to avoid modifying the original object. We now always
	  shallow clone object to unbless it, so we don't need this case
	  differentiation.

        - [Removed features] Remove commands: unbless_pp, unbless_ffc_inlined.


0.45    2017-01-10  Released-By: PERLANCAR

	- Remove embedding of String::LineNumber & String::PerlQuote (I
	  don't feel embedding is elegant or worth the hassle, we should
	  fatpack/datapack only the scripts).


0.44    2017-01-03  Released-By: PERLANCAR

	- Add option: !clone_func.

	- Add command: unbless_ffc_inlined. UPDATE 2017-01-14: now removed.


0.43    2016-12-29  Released-By: PERLANCAR

	- No functional changes.

	- Update fatpack snippet.


0.42    2016-12-28  Released-By: PERLANCAR

	- No functional changes.

	- [dist] Fix expressing embed prereq relationship with x_embed.


0.41    2016-12-27  Released-By: PERLANCAR

	- No functional changes.

	- [dist] Use _EMBED:: prefix to express embed relationship.


0.40    2016-12-27  Released-By: PERLANCAR

	- No functional changes.

	- Standardize header & footer comment for embedded modules.


0.39    2016-12-27  Released-By: PERLANCAR

	- No functional changes.

	- Replace embedding code with fatpack code so it can be loaded on
	  demand.


0.38    2016-12-26  Released-By: PERLANCAR

	- Downgrade String::LineNumber and String::PerlQuote from
	  RuntimeRequires to RuntimeSuggests, embed these modules.


0.37    2016-05-31  Released-By: PERLANCAR

        - Replace circular test with another one which is not failing [CT].


0.36    2016-05-28  Released-By: PERLANCAR

        - [Bugfix] Fix deep recursion problem by detecting circular reference
          early, before other options.


0.35    2016-05-21  Released-By: PERLANCAR

        - [Bugfix] Recursing into object should be done after processing object